thesis tex update

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -29,7 +29,7 @@
 % bib options
 % \usepackage[square]{natbib}
 \usepackage[english]{babel}
-\usepackage[style=authoryear,natbib=true,uniquename=false,uniquelist=false]{biblatex}
+\usepackage[style=authoryear,natbib=true,uniquename=false,uniquelist=false,backend=biber]{biblatex}
 \addbibresource{thesis.bib}
 \addbibresource{atlas.bib}
 \addbibresource{sugar-glider.bib}
