--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -185,3 +185,7 @@
   \setcounter{subsection}{0}%
   \gdef\thesection{\@arabic\c@section}}
 \makeatother
+
+\renewcommand{\sectionautorefname}{Section}%
+\renewcommand{\subsectionautorefname}{Section}%
+\renewcommand{\subsubsectionautorefname}{Section}%
