--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -14,5 +14,5 @@ Lots of people to thank! But I may have to trim this list (sorry)!
     \item collaborations: rgz, of course
     \item supervisors: cheng, naomi, ivy, julie, chris
     \item notable people from my research groups: nick, nick 2, karlie, alec, jack, mengyan, dawei, james, lyla
-    \item people who proofread this thesis: probably rachel, sarah, jack, adam, elly, jakub
+    \item people who proofread this thesis: henry, and probably rachel, sarah, jack, adam, elly, jakub
 \end{itemize}
