--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -6,6 +6,8 @@
 \section{Motivation}
 \label{sec:motivation}
 
+There exist problems in astronomy that you cannot solve by downloading XGB and hitting them with a hammer. This is why we need to do astroinformatics research.
+
 
 \section{Thesis Outline}
 \label{sec:outline}
