--- a/thesis/rlfs.tex
+++ b/thesis/rlfs.tex
@@ -5,6 +5,7 @@
 \section{Radio Luminosity Functions}
 \label{sec:rlfs}
 
+make James' picture of binary xid before partitioning and colour it with a value-ramped viridis.
 
 \section{Making Catalogues with Binary Cross-identification}
 \label{sec:revisiting-cross-id}
